fix:spacing

--- a/src/styles/about/notifications.module.scss
+++ b/src/styles/about/notifications.module.scss
@@ -182,7 +182,7 @@ $max-z: 20;
         margin-bottom: calc(var(--space-xs) + var(--space-xs));
 
         &.expanded {
-            margin-bottom: var(--space-xxs);
+            margin-bottom: var(--space-xs);
         }
     }
 
